# ebb

./: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  THIRD_PARTY  command_line_help.md  deny.toml  flake.nix  gen-docs.sh  gen-third-party.sh  renovate.json
.github/workflows/: ci.yml  licenses.yml  reuse.yml  rust.yml
src/: duration_human.rs  formatting.rs  lib.rs  main.rs  output.rs  persistence.rs  serde_utils.rs  types.rs
src/cli/: balance.rs  config.rs  days_off.rs  holiday.rs  mod.rs  project.rs  report.rs  sick_day.rs  sickday.rs  tag.rs  tracking.rs  vacation.rs
src/commands/: holiday.rs  mod.rs  sickday.rs  tracking.rs  vacation.rs
tests/: balance.rs  cancel.rs  config_get.rs  config_list.rs  config_set.rs  days_off.rs  holiday_add.rs  holiday_edit.rs  holiday_list.rs  holiday_remove.rs  project_list.rs  project_rename.rs  report.rs  restart.rs  sickday_add.rs  sickday_edit.rs  sickday_list.rs  sickday_remove.rs  start.rs  status.rs  stop.rs  tag_list.rs  tag_remove.rs  tag_rename.rs  vacation_add.rs  vacation_edit.rs  vacation_list.rs  vacation_remove.rs
