[package]
name = "ebb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
confy = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.1"
toml = "0.8.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1.0"
tempfile = "3"
