# SPDX-FileCopyrightText: 2025 Mathias Polligkeit
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ebb"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
clap-markdown = "0.1.5"
clap_complete = "4.5.54"
humantime = "2.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1"
tabled = "0.20.0"
toml = "0.9.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1.0"
tempfile = "3"
